@@ -6,7 +6,7 @@ public class PanelValidator {
 
   public static boolean isValid(JTextField... fields) {
     for (JTextField field : fields) {
-      if (field.getText().trim().isEmpty()) {
+      if (field.getText() != null && field.getText().trim().isBlank()) {
         return false;
       }
     }
